# fuelgrainsim

./: .gitignore  LICENSE  README.md  pyproject.toml  write_version_info.py
src/fuelgrainsim/: thrust_curve_class.py  thrust_simulation.py
test_files/: 4_point_fix.csv  4_point_fix.dxf
